# rust-w-pipo

./: README.md
aoc/: Cargo.toml
aoc/input/: 2015-3.txt
aoc/src/: trait.rs
playground/: Cargo.toml
playground/src/: main.rs
rust/: 00-introduction.md  01-outils.md  02-bases.md  03-memoire.md  04-ownership.md  05-struct-enum.md  06-traits.md  07-generics.md  08-iterator.md  09-lifetime.md  10-smart-pointers.md  11-threads.md  12-patterns.md  99-exercises.md
